# serializer version: 1
# name: TestCausalOrderingOutputs.test_rf_regressor_copula_causal_asymmetric_confounding
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.126   |   -0.06448 |   -0.08762 |     0.00585 |     -0.0204  |   -0.05836 |   -0.13007 |    -0.03672 |
      |  2 |            2 | 2.20594 | -0.63252 |   -0.05331 |   -0.33228 |    -0.00699 |     -0.02532 |   -0.0258  |   -0.12588 |    -0.02701 |
      |  3 |            3 | 2.20594 | -0.2885  |    0.44892 |    0.24123 |    -0.03226 |      0.05211 |    1.32248 |    0.05552 |     0.14766 |
      |  4 |            4 | 2.20594 |  0.67277 |   -0.18187 |    0.01917 |     0.03066 |      0.00473 |   -0.15472 |    0.06183 |     0.02474 |
      |  5 |            5 | 2.20594 |  0.10563 |   -0.10445 |   -0.0128  |     0.02973 |      0.05355 |    0.0674  |   -0.01317 |     0.00826 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.00057 |    0.0024  |    0.00252 |     0.00181 |      0.00513 |    0.00207 |    0.00241 |     0.00518 |
      |  2 |            2 |      0 |  0.00037 |    0.00172 |    0.00163 |     0.00285 |      0.00322 |    0.00247 |    0.00343 |     0.00332 |
      |  3 |            3 |      0 |  0.0029  |    0.01379 |    0.01273 |     0.01135 |      0.0184  |    0.0161  |    0.01123 |     0.01351 |
      |  4 |            4 |      0 |  0.00046 |    0.00227 |    0.00204 |     0.0011  |      0.00238 |    0.00135 |    0.00144 |     0.00195 |
      |  5 |            5 |      0 |  0.00119 |    0.00534 |    0.00524 |     0.00208 |      0.00417 |    0.00328 |    0.00197 |     0.00368 |
    ''',
  })
# ---
# name: TestCausalOrderingOutputs.test_rf_regressor_ctree_causal_symmetric
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.94832 |    0.05185 |   -0.28768 |    -0.0866  |     -0.03456 |   -0.19539 |   -0.36086 |     0.34377 |
      |  2 |            2 | 2.20594 | -0.36695 |   -0.00629 |   -0.50368 |     0.02089 |     -0.00314 |   -0.04419 |   -0.11287 |    -0.21288 |
      |  3 |            3 | 2.20594 |  0.37687 |    0.65743 |   -0.00244 |    -0.00648 |     -0.05977 |    0.82635 |   -0.00523 |     0.16043 |
      |  4 |            4 | 2.20594 |  0.18793 |   -0.12065 |    0.25461 |     0.01512 |     -0.07799 |   -0.19307 |    0.08305 |     0.32831 |
      |  5 |            5 | 2.20594 |  0.33967 |    0.02645 |   -0.22711 |     0.0061  |      0.00807 |    0.13753 |   -0.41649 |     0.25992 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.05715 |    0.05651 |    0.05789 |     0.08121 |      0.04819 |    0.09545 |    0.11083 |     0.07565 |
      |  2 |            2 |      0 |  0.05204 |    0.06165 |    0.06198 |     0.05197 |      0.04713 |    0.04756 |    0.14708 |     0.06878 |
      |  3 |            3 |      0 |  0.05221 |    0.06692 |    0.0452  |     0.06652 |      0.0519  |    0.04949 |    0.10162 |     0.06432 |
      |  4 |            4 |      0 |  0.03823 |    0.05184 |    0.0504  |     0.06414 |      0.04854 |    0.04314 |    0.12402 |     0.08366 |
      |  5 |            5 |      0 |  0.04357 |    0.04105 |    0.05944 |     0.0566  |      0.03375 |    0.04663 |    0.05584 |     0.04958 |
    ''',
  })
# ---
# name: TestCausalOrderingOutputs.test_rf_regressor_gaussian_causal_asymmetric
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.21251 |   -0.06351 |   -0.06749 |    -0.00385 |     -0.04544 |   -0.04777 |   -0.04702 |    -0.0302  |
      |  2 |            2 | 2.20594 | -0.73041 |   -0.06008 |   -0.29421 |     0.0139  |     -0.05219 |   -0.03311 |   -0.02998 |    -0.04303 |
      |  3 |            3 | 2.20594 | -0.30878 |    0.52372 |    0.2551  |     0.05529 |      0.06526 |    1.13555 |    0.07592 |     0.14512 |
      |  4 |            4 | 2.20594 |  0.72165 |   -0.21441 |   -0.00539 |     0.04086 |      0.01009 |   -0.1562  |    0.01679 |     0.06393 |
      |  5 |            5 | 2.20594 |  0.11272 |   -0.07054 |   -0.02284 |     0.00154 |      0.06852 |    0.00612 |    0.01115 |     0.02747 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.00046 |    0.00206 |    0.00202 |     0.00347 |      0.00658 |    0.00367 |    0.00444 |     0.00735 |
      |  2 |            2 |      0 |  0.00108 |    0.00481 |    0.00473 |     0.00651 |      0.01171 |    0.00618 |    0.00915 |     0.01252 |
      |  3 |            3 |      0 |  0.00226 |    0.01066 |    0.00995 |     0.01051 |      0.01997 |    0.01267 |    0.01195 |     0.02315 |
      |  4 |            4 |      0 |  0.00119 |    0.00564 |    0.00523 |     0.00451 |      0.00739 |    0.00634 |    0.00382 |     0.0097  |
      |  5 |            5 |      0 |  0.0005  |    0.00255 |    0.00222 |     0.00628 |      0.00555 |    0.00698 |    0.00551 |     0.00803 |
    ''',
  })
# ---
# name: TestCausalOrderingOutputs.test_rf_regressor_gaussian_causal_symmetric
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.83324 |   -0.00685 |   -0.36058 |     0.00447 |     -0.09788 |   -0.07688 |   -0.07622 |    -0.07062 |
      |  2 |            2 | 2.20594 | -0.81848 |   -0.01908 |   -0.24768 |    -0.07803 |     -0.05346 |   -0.00956 |    0.01449 |    -0.01731 |
      |  3 |            3 | 2.20594 |  0.46521 |    0.59257 |   -0.14769 |    -0.00181 |      0.03387 |    0.84724 |    0.01128 |     0.14651 |
      |  4 |            4 | 2.20594 |  0.27388 |   -0.04133 |    0.17822 |     0.08527 |      0.01992 |   -0.17881 |    0.08369 |     0.05647 |
      |  5 |            5 | 2.20594 | -0.33566 |   -0.06163 |    0.05713 |     0.116   |      0.14863 |    0.03032 |    0.0715  |     0.10786 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.02769 |    0.03476 |    0.05569 |     0.05152 |      0.06114 |    0.02012 |    0.06027 |     0.05785 |
      |  2 |            2 |      0 |  0.02175 |    0.02326 |    0.029   |     0.03918 |      0.03998 |    0.01669 |    0.02973 |     0.0346  |
      |  3 |            3 |      0 |  0.02691 |    0.02816 |    0.03761 |     0.03149 |      0.03888 |    0.02036 |    0.04009 |     0.03154 |
      |  4 |            4 |      0 |  0.01288 |    0.02379 |    0.01708 |     0.00958 |      0.02067 |    0.00914 |    0.01612 |     0.01287 |
      |  5 |            5 |      0 |  0.02194 |    0.02485 |    0.04123 |     0.04063 |      0.03181 |    0.01875 |    0.05163 |     0.04135 |
    ''',
  })
# ---
